feat: add lang attribute to html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
+  <head> </head>
   <body>
     <h1>Drako Nikita</h1>
     <img height="250" width="250" src="image.png" />
