feat: add alt attribute

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> </head>
   <body>
     <h1>Drako Nikita</h1>
-    <img height="250" width="250" src="image.png" />
+    <img height="250" width="250" src="image.png" alt="Nikita Drako" />
     <h2>Information</h2>
     <ul>
       <li>Age: 20</li>
