--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> </head>
+  <head>
+    <title>CV</title>
+    <meta charset="utf-8" />
+  </head>
   <body>
     <h1>Drako Nikita</h1>
     <img height="250" width="250" src="image.png" alt="Nikita Drako" />
