--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>CV</title>
     <meta charset="utf-8" />
   </head>
-  <body>
+  <img>
     <h1>Drako Nikita</h1>
-    <img height="250" width="250" src="image.png" alt="Nikita Drako" />
+    <img height="250" width="250" src="image.png" alt="Nikita Drako"></img>
     <h2>Information</h2>
     <ul>
       <li>Age: 20</li>
