--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>CV</title>
   </head>
-  <img>
+  <body>
     <h1>Drako Nikita</h1>
     <img height="250" width="250" src="image.png" alt="Nikita Drako"></img>
     <h2>Information</h2>
