--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   </head>
   <body>
     <h1>Drako Nikita</h1>
-    <img height="250" width="250" src="image.png" alt="Nikita Drako"></img>
     <h2>Information</h2>
     <ul>
       <li>Age: 20</li>
@@ -20,18 +19,22 @@
     </ul>
     <h2>Skills</h2>
     <ul>
-      <li>Languages:</li>
-      <ol>
-        <li>C#</li>
-        <li>C++</li>
-        <li>C# for Unity</li>
-        <li>Java</li>
-      </ol>
-      <li>Databases:</li>
-      <ol>
-        <li>PostgreSql</li>
-        <li>Transact-SQL</li>
-      </ol>
+      <li>
+        Languages:
+        <ol>
+          <li>C#</li>
+          <li>C++</li>
+          <li>C# for Unity</li>
+          <li>Java</li>
+        </ol>
+      </li>
+      <li>
+        Databases:
+        <ol>
+          <li>PostgreSql</li>
+          <li>Transact-SQL</li>
+        </ol>
+      </li>
       <li>A2 English</li>
     </ul>
   </body>
